# repo-historian

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
evals/: __main__.py  cli.py  evaluators.py  experiment.py  pipeline.py  run_evals.py  types.py
evals/datasets/: langchain_langgraph.json
repo_historian/: __init__.py  __main__.py  config.py  graph.py  multi_repo_graph.py  nodes.py  run.py  state.py
repo_historian/nodes/: __init__.py  _helpers.py  analyze_commit.py  analyze_diff.py  cluster_into_eras.py  collect_and_merge.py  cross_repo_cluster_eras.py  cross_repo_expand_narrative.py  cross_repo_synthesize_outline.py  expand_to_narrative.py  fetch_commit_history.py  fetch_repo_metadata.py  run_single_repo.py  select_analyses.py  summarize_analyses.py  synthesize_outline.py  triage_commits.py  write_narrative.py
