[project]
name = "repo-historian"
version = "0.1.0"
description = "LangGraph pipeline that produces a cited narrative history of a GitHub repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygithub>=2.6",
    "langchain-anthropic>=1.0",
    "langchain-openai>=1.0",
    "langchain-google-genai>=4.0",
    "langgraph>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
